finish polishing article01 mobile

--- a/Stylesheets/article-1.css
+++ b/Stylesheets/article-1.css
@@ -1,6 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+
+
+
 :root{
 	/* colors */
 	--article01-primary-color:#BDE662;
+
+	/* typefaces */
+	--font-family-primary:"Space Grotesk",serif;
+	--font-family-secondary:"Roboto Mono",monospace; "Space Grotesk",serif;
+	--font-accent: "Pacifico", cursive;
 }
 
 /* table of content */
@@ -18,13 +28,14 @@ header{
 	/* big-article-heading */
 	h1{
 		font-family:var(--font-family-primary);
-		font-size:4rem;
+		font-size:3.7rem;
 		font-weight:bold;
 		line-height:calc(var(--font-size-h1)+0.5rem);
 		color:#121212;
 		margin-left:var(--spacing-xl);
 		margin-right:var(--spacing-xl);
 		margin-bottom:2rem;
+		margin-top:2rem;
 	}
 
 	/* section stickies header */
@@ -32,7 +43,20 @@ header{
 		background-color:var(--article01-primary-color);
 		color:var(--text-color);
 		margin-top:1.5rem;
+		border-bottom:0.2rem solid #121212;
 	}
+
+	h5{
+		font-family:var(--font-family-primary);
+		font-size:1.2rem;
+		line-height:2rem;
+	}
+
+footer{
+	background-color:var(--article01-primary-color);
+	margin-bottom:3.1rem;
+}
+
 
 /* table of content */
 .table_of_content{
@@ -181,19 +205,14 @@ details{
 		padding-bottom:0.5rem;
 		padding-left:0.8rem;
 		padding-right:0.8rem;
-		background-color: white; 
+		background-color:#BDE662;
 		color: black; 
 		border: 1.5px solid #000000;
+		box-shadow: 0px 0px 0px 0px #121212, 3px 3px 0px 0px #121212;
 		border-radius:0.8rem;
 		margin-left:18rem;
+		margin-bottom:3rem;
 	}
-	
-#button:hover {
-		font-family var(--font-family);
-		font-size:1rem;
-		background-color: #04AA6D;
-		color: white;
-}
 
 /* sticky-aside */
 .sticky-aside {
@@ -217,16 +236,128 @@ details{
 
 #intro{
 	background-color:#ffffff;
-	outline-style:solid;
-	outline-color: 2px #121212;
-	border-radius:0.5rem;
+	outline:solid 0.2rem #121212;
+	border-radius:1rem;
 	padding:1.7rem;
 	margin:2rem;
 }
 
 .full-text { display:none;} 
 
+#title-art{
+	font-family:var(--font-accent);
+	font-size:4rem;
+	line-height:5rem;
+	
+}
 
+/* section heading */
+.sticky-header {
+	max-width:55rem;
+	margin: auto;
+	position:sticky;
+	top:0rem;
+	z-index:auto;
+}
+
+.decorative-01 {
+	width:11rem; /* adjust to control the size */
+	aspect-ratio: 1;
+	--g:/41.422% 41.422% radial-gradient(#000 calc(71% - 1px),#0000 71%) no-repeat;
+	mask: radial-gradient(100% 100%,#000 calc(20.711% - 1px),#0000 20.711%) subtract,81.262% 89.022% var(--g),10.978% 81.262% var(--g),18.738% 10.978% var(--g),89.022% 18.738% var(--g);
+	background-color:#000000;
+	position:absolute;
+	left:15.5rem;
+	top:35.5rem;
+}
+
+.decorative-02 {
+	width:10.65rem; /* adjust to control the size */
+	aspect-ratio: 1;
+	--g:/41.422% 41.422% radial-gradient(#000 calc(71% - 1px),#0000 71%) no-repeat;
+	mask: radial-gradient(100% 100%,#000 calc(20.711% - 1px),#0000 20.711%) subtract,81.262% 89.022% var(--g),10.978% 81.262% var(--g),18.738% 10.978% var(--g),89.022% 18.738% var(--g);
+	background-color:#F5A3DE;
+	position:absolute;
+	left:15.5rem;
+	top:35.5rem;
+}
+
+.empty-sticky { display:none;}
+
+.highlighted-text{
+	background-color:#BDE662;
+}
+
+.big-quotes{
+	background-color:white;
+	border:0.2rem solid #121212;
+	border-left:0.5rem solid #121212;
+	border-radius:1rem;
+	max-width:30rem;
+	margin-left:2rem;
+	margin-right:2rem;
+	margin-top:2rem;
+	margin-bottom:2rem;
+}
+
+.big-quotes p{
+	font-family:var(--font-family-secondary);
+	font-size:1.2rem;
+	line-height:2rem;
+	margin-bottom:1.5rem;
+}
+
+.bigger-quote p{
+	font-family:var(--font-family-primary);
+	font-weight:800;
+	font-size:2rem;
+	line-height:3rem;
+	margin:1.7rem;
+}
+
+.shape {
+	margin-left:5rem;
+	margin-top:2rem;
+	max-width:2rem;
+	z-index:-500;
+}
+
+.apple{
+	background: black;
+	width: 13rem;
+	height: 12.37rem;
+	position: absolute;
+	border-radius: 35% 35% 41% 41% / 42% 42% 75% 75%;
+	transform:scale(0.4);
+}
+
+.apple:before {
+	background:#121212;
+	content: "";
+	width: 55px;
+	height: 55px;
+	position: absolute;
+	margin: -51px 0 0 100px;
+	border-radius: 100px 0;
+	z-index: 5;
+}
+
+.apple:after {
+	background:rgb(250, 250, 238);
+	content: "";
+	width: 5.6rem;
+	height: 5.6rem;
+	position: absolute;
+	margin: 1.75rem 0 0 10.87rem;
+	border-radius: 50%;
+	transform: rotate (-53deg);
+	z-index: 4;
+	box-shadow: -7.9rem -109.5px 0 #fafaee, -7.37rem -6.68rem 0 #fafaee, -115.5px -102.5px 0 #fafaee, -6.59rem -7.21rem #fafaee, -105px -6.84rem 0 #fafaee, -8.06rem 10.37rem 0 #fafaee, -107.5px 166px 0 #fafaee, -119px 10.063rem #fafaee;
+}
+
+#extra-space{
+	margin-top:15rem;
+}
 
 @media (min-width:650px){
 	h1{
@@ -238,23 +369,65 @@ details{
 	
 @media (min-width:1280px){
 
+	.empty-sticky {display:inline-block;}
+
+	.empty-sticky{
+		color:#fafaee;
+		position:sticky;
+
+	}
+
+
+	#title-art{
+		font-family:var(--font-accent);
+		font-size:9.5rem;
+		line-height:12rem;
+		background: radial-gradient(
+			circle at 100%,
+			#033918,
+			#065f28 50%,
+			#076e2f 75%,
+			#0c843a 75%,
+			#033918 75%
+		  );
+		  font-weight: 600;
+		  background-size: 200% auto;
+		  color: #000000;
+		  background-clip: text;
+		  -webkit-text-fill-color: transparent;
+		  animation: animatedTextGradient 2s linear infinite;
+		}
+		
+		@keyframes animatedTextGradient {
+		  to {
+			background-position: 200% center;
+		  }
+	}
+
+	
+
+
 /* heading */
 	h1{
 		font-family: var(--font-family-primary);
-		font-size:9.5rem;
-		line-height:9rem;	
+		font-size:9rem;
+		line-height:8rem;
 		margin-left:3.85rem;
-		margin-bottom:4.5rem; 
+		margin-bottom:1rem; 
+		z-index:1;
 	}
 
 	h2 {
 		max-width:60rem;
+		border-radius:var(--border-radius);
+		outline-style:var(--outline-style);
+		outline-color:var(--outline-color);
 	}
 
 	h5{
-		font-size:1rem;
-		line-height:1.8rem;
-		padding:0.5rem;
+		font-family:var(--font-family-primary);
+		font-size:1.3rem;
+		line-height:2rem;
 	}
 
 p, blockquote {
@@ -403,7 +576,10 @@ h4 a:active{
 	.sticky-header {
 		max-width:55rem;
 		margin: auto;
-		z-index:300;
+		position:sticky;
+		top:2.54rem;
+		z-index:auto;
+
 	}
 
 	.highlighted-text{
@@ -446,6 +622,7 @@ h4 a:active{
 		background-color: #ffffff;
 		color: black; 
 		border: 2px solid #000000;
+		box-shadow: 0px 0px 0px 0px #121212, 6px 6px 0px 0px #121212;
 		border-radius:0.5rem;
 		margin-left:72rem;
 	}
@@ -469,9 +646,8 @@ h4 a:active{
 	}
 
 
-
 #extra-space{
-	padding-top:20rem;
+	margin-top:20rem;
 }
 
 /* apple space modified from https://codepen.io/hb1/pen/LVELdJ */
@@ -559,5 +735,23 @@ b {
 	  height: 400px; width: 400px; border-radius: 200px;
 	  background-image: radial-gradient(center center, 200px 200px, rgba(white,0.9), rgba(white,0));
 	}
-	
+}
+	/* blue sparkly */
+.decorative-01 {
+	width:13rem; /* adjust to control the size */
+	aspect-ratio: 1;
+	--g:/41.422% 41.422% radial-gradient(#000 calc(71% - 1px),#0000 71%) no-repeat;
+	mask: radial-gradient(100% 100%,#000 calc(20.711% - 1px),#0000 20.711%) subtract,81.262% 89.022% var(--g),10.978% 81.262% var(--g),18.738% 10.978% var(--g),89.022% 18.738% var(--g);
+	background-color:#F5A3DE;
+	position:absolute;
+	left:45rem;
+	top:34rem;
+}
+
+#intro{
+	font-family:var(--font-family-primary);
+	max-width:48.5rem;
+	border-radius:1rem;
+	z-index:(-1);
+}
 }
