fixing article 01 desktop view

--- a/Stylesheets/article-1.css
+++ b/Stylesheets/article-1.css
@@ -52,10 +52,12 @@ header{
 		line-height:2rem;
 	}
 
-footer{
+footer #mobile-footer {
 	background-color:var(--article01-primary-color);
 	margin-bottom:3.1rem;
 }
+
+#mobile-footer{display:inline-block}
 
 
 /* table of content */
@@ -369,6 +371,8 @@ details{
 	
 @media (min-width:1280px){
 
+	#mobile-footer{display:none}
+
 	.empty-sticky {display:inline-block;}
 
 	.empty-sticky{
@@ -446,18 +450,14 @@ article {
 }
 
 footer{
-	max-width:31rem;
-	margin-bottom:5rem;
-	margin-left:31rem;
-	margin-top:5rem;
+	max-width:100%;
+	
 }
 
 /* blockquote */
 	.bigger-quote{
 		font-family:var(--font-family-primary);
 		font-size:3rem;
-		padding:1.5rem;
-		margin-left:4rem;
 	}
 
 	.big-quotes{
@@ -625,6 +625,7 @@ h4 a:active{
 		box-shadow: 0px 0px 0px 0px #121212, 6px 6px 0px 0px #121212;
 		border-radius:0.5rem;
 		margin-left:72rem;
+		margin-top:4rem;
 	}
 
 	#button:hover {
