fixed homepage font issue

--- a/Stylesheets/article-1.css
+++ b/Stylesheets/article-1.css
@@ -303,9 +303,9 @@ details{
 }
 
 .big-quotes p{
-	font-family:var(--font-family-secondary);
-	font-size:1.2rem;
-	line-height:2rem;
+	font-family:var(--font-family-primary);
+	font-size:1.7rem;
+	line-height:2.5rem;
 	margin-bottom:1.5rem;
 }
 
@@ -373,12 +373,17 @@ details{
 
 	#mobile-footer{display:none}
 
-	.empty-sticky {display:inline-block;}
+	.empty-sticky {display:block;}
 
 	.empty-sticky{
-		color:#fafaee;
-		position:sticky;
-
+	background-color:#fafaee;
+	height:2.4rem;
+	position:sticky;
+	top:0;
+	z-index:200;
+	max-width:55rem;
+	margin: auto;
+	margin-bottom:0.5rem;
 	}
 
 
@@ -454,10 +459,17 @@ footer{
 	
 }
 
+p{
+	font-family:var(--font-family-primary);
+	font-size:1.3rem;
+	line-height:2.4rem;
+}
+
 /* blockquote */
-	.bigger-quote{
+	.bigger-quote p{
 		font-family:var(--font-family-primary);
 		font-size:3rem;
+		line-height:3.8rem;
 	}
 
 	.big-quotes{
@@ -465,11 +477,10 @@ footer{
 		border:2px solid #121212;
 		border-left:10px solid #121212;
 		border-radius:2rem;
-		padding:0.2rem;
 		border-radius:0.5rem;
 		max-width:30rem;
-		margin-left:20rem;
 		margin-top:2rem;
+		margin-auto;
 	}
 
 	.big-quotes:hover{
@@ -572,13 +583,15 @@ h4 a:active{
 		border: solid 2px black;
 	}
 
+
 	/* section heading */
 	.sticky-header {
 		max-width:55rem;
 		margin: auto;
 		position:sticky;
 		top:2.54rem;
-		z-index:auto;
+		z-index:200;
+		margin-bottom:3rem;
 
 	}
 
@@ -654,8 +667,8 @@ h4 a:active{
 /* apple space modified from https://codepen.io/hb1/pen/LVELdJ */
 
 .shape {
-	margin-left:5rem;
-	margin-top:7rem;
+	margin-left:20rem;
+	margin-top:3.5rem;
 	max-width:2rem;
 	z-index:-500;
 }
@@ -748,6 +761,7 @@ b {
 	left:45rem;
 	top:34rem;
 }
+
 
 #intro{
 	font-family:var(--font-family-primary);
