--- a/Stylesheets/homepage.css
+++ b/Stylesheets/homepage.css
@@ -503,13 +503,13 @@ h3{
 	}
 
 	h3{
-		font-family:var(--font-family-homepage);
+		font-family:var(--font-title);
 		font-size:1.5rem;
 		line-height:2.4rem;
 	}
 
 	h4{
-		font-family:var(--font-family-homepage);
+		font-family:var(--font-title);
 		font-size:2.4rem;
 		font-weight:800;
 		margin-left:1rem;
