--- a/Stylesheets/article-3.css
+++ b/Stylesheets/article-3.css
@@ -5,6 +5,11 @@
 :root{
 	/* colors */
 	--article3-primary-color:#6ec6f9;
+
+		/* typefaces */
+		--font-family-primary:"Space Grotesk",serif;
+		--font-family-secondary:"Roboto Mono",monospace; "Space Grotesk",serif;
+	
 }
 
 /* top nav */
@@ -25,21 +30,28 @@ h1{
 /* section stickies heading */
 h2{
 	background-color:var(--article3-primary-color);
-	color:var(--secondary-color);
+	color:var(--primary-color);
+	border-bottom:0.2rem solid #121212;
 }
 
 /* hero blurb */
 h5{
-	line-height:1.5rem;
-	color:#121212;
+	font-family:var(--font-family-primary);
+	font-size:1.2rem;
+	line-height:2rem;
 }
 
 p{
-	font-family:var(--font-family-secondary);
-	font-size:1rem;
+	font-family:var(--font-family-primary);
+	font-size:1.1rem;
 	line-height:1.8rem;
 	margin-left:2.25rem;
 	margin-right:2.25rem;
+}
+
+/* table of content */
+aside{
+	padding-bottom:var(--spacing-xl);
 }
 
 /* blockquote */
@@ -66,11 +78,6 @@ blockquote p {
 	padding-bottom:var(--spacing-lg);
 }
 
-.sticky-header, #section1{
-	position:sticky;
-	top:2.5rem;
-	z-index:1;
-}
 
 .article-info{
 	padding-top:1.5rem;
@@ -223,6 +230,7 @@ details{
 	margin-right: 2rem;
 	border-radius:0.5rem;
 	border: solid 2px #121212;
+	z-index:-100;
 }
 
 
@@ -240,15 +248,17 @@ details{
 }
 
 .box-categories {
-	padding:2rem;
+	font-family:var(--font-family-primary);
+	font-size:1.5rem;
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-template-rows: repeat(2, 1fr);
-	grid-column-gap: 0px;
-	grid-row-gap: 0px;
+	grid-template-columns: repeat(1, 0.5fr);
+	grid-template-rows: repeat(1, 0.5fr);
+	/* grid-column-gap: 0px; */
+	grid-row-gap:20px;
+	margin-left:2rem;
 }
 
-.div1 { 
+/* .div1 { 
 	background-color:white;
 	outline: solid 2px black;
 	border-radius:0.5rem 0 0 0;
@@ -269,17 +279,54 @@ details{
 	background-color:white;
 	outline: solid 2px black;
 	border-radius: 0 0 0.5rem 0;
+} */
+
+.div1 { 
+	background-color:#BDE662;
+	outline: solid 2px black;
+	border-radius:1rem;
+}
+.div2 {
+	background-color:#F5A3DE;
+	outline: solid 2px black;
+	border-radius:1rem;
+}
+
+.div3 {
+	background-color:#6ec6f9;
+	outline: solid 2px black;
+	border-radius: 1rem;
+}
+
+.div4 {
+	background-color:white;
+	outline: solid 2px black;
+	border-radius:1rem;
 }
 
 .four-categories{
-	font-size:3rem;
+	font-family:var(--font-family-primary);
+	font-size:2rem;
 	max-width:15rem;
 }
 
 .bold-text{
+	font-family:var(--font-family-primary);
 	font-weight:bold;
-	font-size:1.1rem;
+	font-size:1.2rem;
 }
+
+.empty-sticky { display:none;}
+
+/* section heading */
+.sticky-header {
+	max-width:55rem;
+	margin: auto;
+	position:sticky;
+	top:0rem;
+	z-index:300;
+}
+
 @media (min-width:770px){
 	h1{
 		font-size:9.5rem;
@@ -289,6 +336,21 @@ details{
 
 	
 @media (min-width:1280px){
+
+	#mobile-footer{display:none}
+
+	.empty-sticky {display:block;}
+
+	.empty-sticky{
+	background-color:#fafaee;
+	height:2.4rem;
+	position:sticky;
+	top:0;
+	z-index:200;
+	max-width:55rem;
+	margin: auto;
+	margin-bottom:0.5rem;
+	}
 
 	/* big article heading */
 	h1{
@@ -369,6 +431,10 @@ details{
 	.sticky-header {
 		max-width:55rem;
 		margin: auto;
+		position:sticky;
+		top:2.54rem;
+		z-index:200;
+		margin-bottom:3rem;
 	}
 
 /* IDs stylings */
@@ -441,11 +507,13 @@ details{
 	position: relative;
 	padding:1.2rem;
 	background: #fefefe;
-	outline-style:solid;
-	outline-color:rgb(22, 161, 231);
-	border-radius:0.5rem;
+	outline: 0.2rem solid #6ec6f9;
+	border-radius:2rem;
 	max-width:28rem;
+	z-index:-200;
 }
+
+
 
 .speech-bubble:after {
 	content: '';
@@ -455,14 +523,11 @@ details{
 	width: 0;
 	height: 0;
 	border: 16px solid transparent;	
-	border-top-color: rgb(22, 161, 231);
+	border-top-color: #6ec6f9;
 	border-bottom: 0;
 	margin-left: -16px;
 	margin-bottom: -16px;
 }
 
-.sticky-header{
-	color:#0f17ac;
-}
 
 	
