--- a/Stylesheets/article-2.css
+++ b/Stylesheets/article-2.css
@@ -6,19 +6,19 @@
 	--font-family-primary:"Space Grotesk",serif;
 	--font-family-secondary:"Roboto Mono",monospace; "Space Grotesk",serif;
 
+	/* typeface-size */
 	--h1-font-size:3rem;
 
-		/* spacing */
-		--spacing-xs: 0.3rem;
-		--spacing-sm: 0.5rem;
-		--spacing-md: 1rem;
-		--spacing-lg: 1.5rem;
-		--spacing-xl: 2rem;
-		--spacing-xxl: 3rem;
+	/* spacing */
+	--spacing-xs: 0.3rem;
+	--spacing-sm: 0.5rem;
+	--spacing-md: 1rem;
+	--spacing-lg: 1.5rem;
+	--spacing-xl: 2rem;
+	--spacing-xxl: 3rem;
 
-		--border-radius-header:0 0 2rem 2rem;
-
-		--s-padding-bottom:2rem;
+	--border-radius-header:0 0 2rem 2rem;
+	--s-padding-bottom:2rem;
 }
 
 /* base styling */
@@ -153,7 +153,6 @@ p{
 .nav-item {
 	background-color: white;
 	justify-content: center;
-	padding:1rem;
 	text-align: center;
 	font-size:1.3rem;
 }
@@ -264,6 +263,7 @@ details{
 
 
 #main-title {display:none;}
+
 #main-title{
 	font-size:2rem;
 }
@@ -276,16 +276,13 @@ details{
 	padding:1rem;
 	margin-left:2rem;
 	margin-bottom:1rem;
-
 }
-
 
 .bold-text{
 	font-weight:bold;
 	font-size:1.1rem;
 }
 
-.short-text { display:inline;}
 .full-text{display:none;}
 
 #desktop-h6{
@@ -303,7 +300,7 @@ details{
 	margin-left:1rem;
 	margin-right:1rem;
 	margin-top:2rem;
-	transform:scale(1);
+	transform:scale(0.1);
 }
 
 #title-art{
